[package]
name = "purrge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.27.0"
globset = "0.4.14"
ratatui = "0.26.1"
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
